--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "artplayer": "^5.3.0",
     "axios": "^1.13.2",
+    "hls.js": "^1.6.15",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
